# qnote

./: .gitignore  CHANGELOG.md  COMPLETION_TESTING.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  build-deb.sh  cleanup-project.sh  install-completion.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test-config.sh
.pybuild/cpython3_3.13_qnote/: .pydistutils.cfg
completion/: qnote.bash-completion  qnote.fish  qnote.zsh-completion
debian/: changelog  control  copyright  install  postinst  rules
docs/: COMPLETION.md  CONFIG.md  DEVELOPMENT.md  INSTALL.md  PACKAGING.md  USAGE.md
qnote/: __init__.py  __main__.py  cli.py
qnote/commands/: __init__.py  add.py  config.py  delete.py  edit.py  list.py  search.py  show.py  todo.py
qnote/core/: __init__.py  database.py  note.py  snippet.py  todo.py
qnote/sync/: __init__.py
qnote/utils/: __init__.py  config.py  editor.py  formatter.py
tests/: __init__.py  test_note.py
